Merged PR 288438: Sonar changes phase 2
Sonar changes phase 2

Related work items: #209216, #209828